--- a/public/styles/_offcanvas.scss
+++ b/public/styles/_offcanvas.scss
@@ -88,10 +88,10 @@
     }
   }
   &-content {
-    height: calc(100vh - #{$offcanvas-header-height});
-    @supports(height: 100dvh) {
+    height: calc(100% - #{$offcanvas-header-height});
+    /*@supports(height: 100dvh) {
       height: calc(100dvh - #{$offcanvas-header-height});
-    }
+    }*/
     overflow-x: hidden;
     overflow-y: auto;
   }
