--- a/public/styles/_offcanvas.scss
+++ b/public/styles/_offcanvas.scss
@@ -27,8 +27,9 @@
 .bs-offcanvas {
 
   $offcanvas-width: 330px;
-  $offcanvas-width-xl: 420px;
+  $offcanvas-width-lg: 420px;
   $offcanvas-width-xxs: calc(100vw - 20px);
+  $largeSizingBreakpoint: md;
 
   $offcanvas-header-bg: $brand;
   $offcanvas-header-height: 3rem;
@@ -41,8 +42,8 @@
     height: 100dvh;
   }
   width: $offcanvas-width;
-  @include media-breakpoint-up(xl){
-    width: $offcanvas-width-xl;
+  @include media-breakpoint-up($largeSizingBreakpoint){
+    width: $offcanvas-width-lg;
   }
   @media(max-width: 350px) {
     width: $offcanvas-width-xxs;
@@ -50,7 +51,7 @@
 
   &--fullwidth {
     width: 100%;
-    @include media-breakpoint-up(xl){
+    @include media-breakpoint-up($largeSizingBreakpoint){
       width: 100%;
     }
     @media(max-width: 350px) {
@@ -110,8 +111,8 @@
   &.bs-offcanvas-left {
     left: 0;
     margin-left: 0 - $offcanvas-width;
-    @include media-breakpoint-up(xl){
-      margin-left: 0 - $offcanvas-width-xl;
+    @include media-breakpoint-up($largeSizingBreakpoint){
+      margin-left: 0 - $offcanvas-width-lg;
       &.bs-offcanvas--fullwidth {
         margin-left: -100%;
       }
@@ -127,8 +128,8 @@
   &.bs-offcanvas-right {
     right: 0;
     margin-right: 0 - $offcanvas-width;
-    @include media-breakpoint-up(xl){
-      margin-right: 0 - $offcanvas-width-xl;
+    @include media-breakpoint-up($largeSizingBreakpoint){
+      margin-right: 0 - $offcanvas-width-lg;
       &.bs-offcanvas--fullwidth {
         margin-right: -100%;
       }
