--- a/public/styles/_offcanvas_basket.scss
+++ b/public/styles/_offcanvas_basket.scss
@@ -1,9 +1,12 @@
 #offcanvas-basket {
+
+  $largeSizingBreakpoint: md;
+
   --item-h-padding: #{$grid-gutter-width/8};
   --item-v-padding: #{$grid-gutter-width/8};
   --sidebar-padding: #{$grid-gutter-width/4};
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up($largeSizingBreakpoint) {
     --item-h-padding: #{$grid-gutter-width/4};
     --item-v-padding: #{$grid-gutter-width/4};
     --sidebar-padding: #{$grid-gutter-width/2};
@@ -73,7 +76,7 @@
         }
       }
     }
-    
+
     .basket-loading, .basket-error {
       display: none;
     }
@@ -138,6 +141,10 @@
       &__image {
         padding-left: $grid-gutter-width/4 !important;
         padding-left: var(--sidebar-padding) !important;
+        img {
+          width: 50px;
+          height: auto;
+        }
       }
       &__name {
         font-weight: $font-weight-bold;
@@ -158,6 +165,43 @@
         font-weight: $font-weight-bold;
         padding-right: $grid-gutter-width/4 !important;
         padding-right: var(--sidebar-padding) !important;
+      }
+    }
+
+    // Small amounts of items have bigger images on big viewports
+    @mixin sizeThumbnailsByCount( $maXCount, $largeThumbSize:80px, $smallThumbSize:50px  ){
+      // Mixin for sizing items thumbnails according to items count
+      .item__image {
+        img {
+          width: $largeThumbSize;
+          height: auto;
+        }
+      }
+      &:first-child:nth-last-child(n+#{$maXCount+1}), &:first-child:nth-last-child(n+#{$maXCount+1}) ~ * {
+        .item__image {
+          img {
+            width: $smallThumbSize;
+            height: auto;
+          }
+        }
+      }
+    }
+
+    $minSizingBreakpoint: map-get($grid-breakpoints, $largeSizingBreakpoint);
+
+    @media(min-width: $minSizingBreakpoint) and (min-height: 600px) and (max-height:749px) {
+      .item {
+        @include sizeThumbnailsByCount( 4 );
+      }
+    }
+    @media(min-width: $minSizingBreakpoint) and (min-height: 750px) and (max-height:919px) {
+      .item {
+        @include sizeThumbnailsByCount( 6 );
+      }
+    }
+    @media(min-width: $minSizingBreakpoint) and (min-height: 920px) {
+      .item {
+        @include sizeThumbnailsByCount( 8 );
       }
     }
   }
