--- a/public/styles/_offcanvas_basket.scss
+++ b/public/styles/_offcanvas_basket.scss
@@ -109,7 +109,7 @@
       padding: $grid-gutter-width/4;
       padding: var(--sidebar-padding);
       .btn {
-        display: block;
+        display: flex;
         .fas,.far {
           color: inherit;
           &:first-child {
