--- a/public/styles/_search_suggestions.scss
+++ b/public/styles/_search_suggestions.scss
@@ -44,6 +44,16 @@
 			&__image {
 				grid-column: 1/2;
 				grid-row: 1/3;
+				position: relative;
+			}
+			&__icons {
+				grid-column: 1/2;
+				grid-row: 1/3;
+				z-index: 10;
+				position: absolute;
+				right: 3px;
+				//bottom: 3px;
+				top: 30px;
 			}
 			&__description {
 				line-height: 1.2;
