--- a/public/styles/_header.scss
+++ b/public/styles/_header.scss
@@ -217,7 +217,6 @@ ol.breadcrumb {
 					background-color: rgba(black,0.8) !important;
 				}
 			}
-			
 			.cart__price {
 				@media(max-width:374px){
 					display: none !important;
@@ -814,7 +813,6 @@ ol.breadcrumb {
 }
 
 .header-favourites {
-	outline: 1px dashed black;
 	display: flex;
 	position: relative;
 	align-items: center;
@@ -857,77 +855,37 @@ ol.breadcrumb {
 			}
 		}
 	}
-}
 
-/*
-.header-favourites {
-	display: flex;
-	position: relative;
-	padding: 1rem;
-	align-items: center;
-	font-size: @font-size-smaller;
-	
-	&::after {
-		content: "|";
-		position: absolute;
-		left: 100%;
-		top: 50%;
-		transform: translate(-50%,-50%);
-	}
-	&__icon {
-		position: relative;
-		//transition: transform 0.35s;
-		.glyphicon {
-			font-size: 1.82rem;
-			color: @brand-pink;
-		}
-		&__text {
-			position: absolute;
-			width: 100%;
-			height: auto;
-			left: 0;
-			top: 0.52rem;
-			display: block;
-			text-align: center;
-			align-items: center;
-			font-size: @font-size-smallest;
-			color: white;
-			line-height: 1;
-			font-weight: bolder;
-		}
-		&--empty {
-			.glyphicon {
-				color: @gray-dark;
-			}
-		}
-	}
-
-	&--just-added {
+	// header favourites in mobile main bar
+	.navbar-top--mobile & {
+		padding-left: 0.5rem;
+		padding-right: 0.5rem;
+		align-self: stretch;
 		.header-favourites__icon {
-			animation-name: header-fav;
-			animation-duration: 0.25s;
-			animation-iteration-count: 1;
-			transform: scale(1);
-			@keyframes header-fav {
-				0%   {transform: scale(5); opacity: 0.25;}
-				100% {transform: scale(1); opacity: 1;}
-			}
-		}
-	}
-
-	&:hover {
-		background-color: @brand-pink;
-		
-		.header-favourites__icon {
-			transform: scale(1.25);
-			//transition: transform 0.15s;
-			.glyphicon {
-				color: white;
+			.fas, .far {
+				font-size: 1.5rem;
 			}
 			&__text {
-				color: @brand-pink;
+				display: none; // font would be too small
+				font-size: 0.75rem;
+				top: 0.35rem;
+			}
+			&--empty {
+				.fas, .far {
+					color: white;
+				}
+			}
+		}
+		&:hover {
+			background-color: $primary;
+			.header-favourites__icon {
+				.fas, .far {
+					color: white;
+				}
+				&__text {
+					color: $primary;
+				}
 			}
 		}
 	}
 }
-*/
