CSS styles for categories list in product detail

--- a/public/styles/_product-detail.scss
+++ b/public/styles/_product-detail.scss
@@ -88,6 +88,17 @@
 			.section__body {
 				ul {
 					font-size: 0.875rem;
+					li {
+						padding-left: 1ch;
+						&::marker {
+							//color: $gray-600;
+							font-family: $fa-font-family;
+							font-weight: 400;
+							content: "\f07c";
+							font-size: 0.85em;
+							margin-right: 1ch;
+						}
+					}
 				}
 			}
 		}
