product detail typography tuning

--- a/public/styles/_product-detail.scss
+++ b/public/styles/_product-detail.scss
@@ -65,17 +65,18 @@
 						tr {
 							th {
 								font-size: inherit;
+								line-height: inherit;
 							}
 						}
 					}
 				}
 				&:nth-child(2){
 					table.table.table-sm {
-						tr:first-child {
+						/*tr:first-child {
 							td, th {
 								padding-top: 14px;
 							}
-						}
+						}*/
 					}
 				}
 			}
