Discounted price css tuning

--- a/public/styles/_prices.scss
+++ b/public/styles/_prices.scss
@@ -106,7 +106,7 @@ $price-font-size-xs: 0.75rem;
 			.currency_main {
 				text-decoration: line-through;
 				font-weight: 600;
-				font-size: $price-font-size-lg;
+				//font-size: $price-font-size-lg;
 			}
 		}
 
