--- a/public/styles/_prices.scss
+++ b/public/styles/_prices.scss
@@ -100,6 +100,7 @@ $price-font-size-xs: 0.75rem;
 		.price--before-discount {
 			display: block;
 			margin-bottom: 0.25rem;
+			color: $gray-500;
 			.currency_main, .vat_label {
 				color: $gray-500;
 			}
