CSS helpers for debugging

--- a/public/styles/application.scss
+++ b/public/styles/application.scss
@@ -158,4 +158,5 @@ $enable-deprecation-messages: false;
 @import "print";
 
 @import "delivery_service_branches";
+@import "debug_helpers";
 //@import "img_colors_preview";
