--- a/public/styles/_bootstrap_variables.scss
+++ b/public/styles/_bootstrap_variables.scss
@@ -747,7 +747,7 @@ $navbar-toggler-border-radius:      0;//$btn-border-radius !default;
 
 $navbar-nav-scroll-max-height:      75vh !default;
 
-$navbar-dark-color:                 rgba($white,0.85) !default;
+$navbar-dark-color:                 white;//rgba($white,0.85) !default;
 $navbar-dark-hover-color:           $white !default;
 $navbar-dark-active-color:          $white !default;
 $navbar-dark-disabled-color:        rgba($white, .25) !default;
